versions/3.5.0/docs/ProxyProfile.md
# ProxyProfile


## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | 
**name** | **str** |  | 
**proxy_generator** | **str** |  | [optional] 
**resolution** | **str, none_type** |  | [optional] 
**rate_control** | **str** |  | [optional] 
**crf** | **int, none_type** |  | [optional] 
**bitrate** | **int, none_type** |  | [optional] 
**audio_bitrate** | **int** |  | [optional] 
**variants_limit** | **int** |  | [optional] 
**enable_dense_filmstrip** | **bool** |  | [optional] 
**enable_watermark** | **bool** |  | [optional] 
**watermark_image** | **str, none_type** |  | [optional] 
**watermark_position** | **str** |  | [optional] 
**watermark_opacity** | **float** |  | [optional] 
**watermark_size** | **float** |  | [optional] 
**enable_timecode** | **bool** |  | [optional] 
**timecode_position** | **str** |  | [optional] 
**timecode_opacity** | **float** |  | [optional] 
**timecode_size** | **float** |  | [optional] 
**lut** | **str, none_type** |  | [optional] 
**hotfolder_copy_to** | **str, none_type** |  | [optional] 
**hotfolder_read_from** | **str, none_type** |  | [optional] 
**hotfolder_queue_timeout** | **int** |  | [optional] 
**hotfolder_encode_timeout** | **int** |  | [optional] 
**vantage_workflow_id** | **str, none_type** |  | [optional] 
**external_transcoder_staging_path** | **str, none_type** |  | [optional] 
**external_transcoder** | **int, none_type** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


